Interpreter/Examples/bad/example6.jam
/* Type errors - for now handled in runtime */
main {
vars:
    string x = 2;
code:
    print(x);
}
